[gd_scene load_steps=10 format=3 uid="uid://cqnk3fok3i4bx"]

[ext_resource type="Script" path="res://scripts/textbox.gd" id="1_648ys"]
[ext_resource type="StyleBox" uid="uid://df2xcacdd4svj" path="res://assets/fonts/styleboxes/button_normal.tres" id="1_fxaqv"]
[ext_resource type="Texture2D" uid="uid://d286kqui0kjj0" path="res://assets/sprites/backgrounds/button.png" id="1_jvb2v"]
[ext_resource type="FontFile" uid="uid://bmuynnr78lkhk" path="res://assets/fonts/terminal-grotesque-webfont.woff" id="1_q5o84"]
[ext_resource type="Theme" uid="uid://c3rh6o4o4o4bu" path="res://assets/fonts/themes/menu_button.tres" id="4_uupgv"]
[ext_resource type="StyleBox" uid="uid://cr11ysb55fg63" path="res://assets/fonts/styleboxes/invisible.tres" id="5_qmmh1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_gtvfk"]
texture = ExtResource("1_jvb2v")
texture_margin_left = 5.0
texture_margin_right = 5.0

[sub_resource type="InputEventKey" id="InputEventKey_4rpj8"]
device = -1
keycode = 4194309

[sub_resource type="Shortcut" id="Shortcut_ntvoy"]
events = [SubResource("InputEventKey_4rpj8")]

[node name="Textbox" type="Panel"]
anchors_preset = 10
anchor_right = 1.0
offset_left = 48.0
offset_top = 16.0
offset_right = -37.0
offset_bottom = 138.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_gtvfk")
script = ExtResource("1_648ys")

[node name="TextboxText" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 16.0
offset_right = -16.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_q5o84")
theme_override_font_sizes/font_size = 35
text = "A wild Monster has appeared 
Defend youself!"
vertical_alignment = 1

[node name="AcceptButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.931658
anchor_top = 0.360656
anchor_right = 0.996985
anchor_bottom = 0.92623
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("4_uupgv")
theme_override_colors/font_color = Color(0.654902, 0.654902, 0.654902, 1)
theme_override_fonts/font = ExtResource("1_q5o84")
theme_override_font_sizes/font_size = 35
theme_override_styles/focus = ExtResource("5_qmmh1")
theme_override_styles/hover = ExtResource("1_fxaqv")
theme_override_styles/pressed = ExtResource("1_fxaqv")
theme_override_styles/normal = ExtResource("1_fxaqv")
shortcut = SubResource("Shortcut_ntvoy")
text = "x"
icon_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="AcceptButton" to="." method="_on_accept_button_pressed"]
